add save button

--- a/tools/compose/traefik.yml
+++ b/tools/compose/traefik.yml
@@ -53,7 +53,7 @@ services:
       - traefik.http.services.printer.loadbalancer.server.port=3000
 
   app:
-    image: amruthpillai/reactive-resume:latest
+    image: myrx
     restart: unless-stopped
     depends_on:
       - postgres
